--- a/hero-profile/profile.css
+++ b/hero-profile/profile.css
@@ -60,6 +60,9 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     background-color: #f1f0f0;
     margin-top: 0%;
+    font-size: 20px;
+    font-weight: 400;
+    color: #000000;
 }
 
 #card2 img {
@@ -171,6 +174,9 @@ body {
     border: rgb(112, 112, 200) solid;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     background-color: #f1f0f0;
+    font-size: 20px;
+        font-weight: 400;
+        color: #000000;
 }
 
 #card4 h2 {
