--- a/Leaderboard/Leaderboard.css
+++ b/Leaderboard/Leaderboard.css
@@ -501,3 +501,8 @@ footer img {
 .star-C {
     color: rgb(0, 255, 26);
 }
+@media screen and (max-width: 600px) {
+    .top3herocard {
+        display: block;
+    }
+}
