--- a/style.css
+++ b/style.css
@@ -349,7 +349,8 @@ footer img {
 .top3herocard {
     display: flex;
     justify-content: end;
-    width: 50px;
+    width: 120px;
+    margin-right: 10px;
 }
 
 .top3-hero-card:nth-child(2) {
