--- a/style.css
+++ b/style.css
@@ -371,3 +371,58 @@ footer img {
     display: flex;
     align-items: center;
 }
+@media screen and (max-width: 992px) {
+    .top3herocard {
+        display: block;
+        width: 410px;
+        margin-right: 100px;
+        height: auto;
+    }
+
+    .eliteherocard {
+        display: block;
+        width: 600px;
+    }
+
+    .herocard {
+        display: block;
+        width: 350px;
+    }
+
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .start {
+        order: 1;
+        margin-bottom: 10px;
+        margin-left: 0px;
+
+    }
+
+    .midden {
+        order: 2;
+        margin-bottom: 10px;
+        margin-left: 100px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .einde {
+        order: 3;
+        margin-top: 10px;
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        justify-content: end;
+        align-items: end;
+        margin-left: 270px;
+    }
+
+    .einde a {
+        margin-bottom: 10px;
+    }
+    
+}
