--- a/style.css
+++ b/style.css
@@ -371,25 +371,19 @@ footer img {
     display: flex;
     align-items: center;
 }
+.top3-hero-number {
+    display: flex;
+    align-items: center;
+}
+.top1Leaderboarddeeds {
+    display: flex;
+    align-items: center;
+}
+.top1Leaderboardvotes {
+    display: flex;
+}
 @media screen and (max-width: 992px) {
-    .top3herocard {
-        display: block;
-        width: 410px;
-        margin-right: 100px;
-        height: auto;
-    }
-
-    .eliteherocard {
-        display: block;
-        width: 600px;
-    }
-
-    .herocard {
-        display: block;
-        width: 350px;
-    }
-
-    .navbar {
+.navbar {
         flex-direction: column;
         align-items: flex-start;
     }
@@ -404,25 +398,42 @@ footer img {
     .midden {
         order: 2;
         margin-bottom: 10px;
-        margin-left: 100px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        margin-left: 25px;
     }
 
     .einde {
         order: 3;
         margin-top: 10px;
-        position: absolute;
-        display: flex;
-        flex-direction: column;
-        justify-content: end;
-        align-items: end;
-        margin-left: 270px;
     }
 
     .einde a {
         margin-bottom: 10px;
     }
+
+        .top {
+            flex-direction: column;
+        }
     
-}
+        .card,
+        .card2,
+        .card3,
+        .card4,
+        .card5 {
+            width: 100%;
+            /* Make cards take full width on smaller screens */
+        }
+    
+        .card img,
+        .card2 img,
+        .card3 img,
+        .card4 img,
+        .card5 img {
+            width: 100%;
+            /* Make images take full width on smaller screens */
+        }
+    
+        .top3-hero-card {
+            margin-left: 0;
+            /* Remove left margin on smaller screens */
+        }
+        }
