--- a/style.css
+++ b/style.css
@@ -412,26 +412,43 @@ footer img {
             flex-direction: column;
         }
     
-        .card,
-        .card2,
-        .card3,
-        .card4,
-        .card5 {
-            width: 100%;
-            /* Make cards take full width on smaller screens */
+        .card{
+            width: 350px;
+            height: 500px;
+            flex-direction: column;
+            align-items: center;
         }
-    
-        .card img,
-        .card2 img,
-        .card3 img,
-        .card4 img,
-        .card5 img {
+                .card2 {
+                    width: 350px;
+                    height: auto;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                }
+                .top3herocard {
+                    display: block;
+                    width: 300px;
+                    height: auto;
+                    justify-content: center;
+                    align-items: center;
+                }
+        .card img {
             width: 100%;
-            /* Make images take full width on smaller screens */
         }
     
         .top3-hero-card {
             margin-left: 0;
-            /* Remove left margin on smaller screens */
+            position: ;
+        }
+        .card4 {
+            display: block;
+            width: 350px;
+        }
+        .wanted {
+            display: block;
+        }
+        .card5 {
+            display: block;
+            width: 350px;
         }
         }
