a lot of changes

--- a/style.css
+++ b/style.css
@@ -380,6 +380,9 @@ footer img {
 #top1Leaderboarddeeds {
     display: flex;
 }
+#text {
+    color: rgb(176, 176, 176);
+}
 @media screen and (max-width: 992px) {
 .navbar {
         flex-direction: column;
