--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
     display: flex;
     flex-direction: column;
 }
+
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -50,9 +51,11 @@ body {
 .top {
     display: flex;
 }
+
 .wanted {
     display: flex;
 }
+
 .card {
     display: flex;
     margin-top: 2%;
@@ -74,6 +77,7 @@ body {
     flex: 1;
     padding: 20px;
 }
+
 .card-content {
     flex: 1;
     padding: 20px;
@@ -102,6 +106,7 @@ body {
 .card p {
     color: #3d3939;
 }
+
 .card2 {
     display: flex;
     justify-content: flex-end;
@@ -129,6 +134,7 @@ body {
 .card2 p {
     color: #3d3939;
 }
+
 .Devider {
     display: flex;
     justify-content: center;
@@ -137,15 +143,18 @@ body {
     color: white;
     font-size: small;
 }
+
 .Devider img {
     width: 85px;
     height: auto;
     margin: 0 auto;
 }
+
 .secondpart {
     background-color: #535050;
     margin: 0%;
 }
+
 .card3 {
     display: flex;
     margin-top: 20px;
@@ -176,6 +185,7 @@ body {
 .card3 p {
     color: #3d3939;
 }
+
 .Devider2 {
     display: flex;
     justify-content: center;
@@ -212,14 +222,17 @@ body {
     padding: 20px;
 
 }
+
 .card2-content h4 {
     font-size: 15px;
     font-weight: 400;
 }
+
 .card2-content h3 {
     font-size: 20px;
     font-weight: 400;
 }
+
 .card2-content h1 {
     font-size: 40px;
     font-weight: 400;
@@ -260,6 +273,7 @@ body {
 .card5 p {
     color: #3d3939;
 }
+
 .transparent-bg {
     opacity: 0.2;
     position: fixed;
@@ -268,6 +282,7 @@ body {
     height: 100%;
     width: 100%;
 }
+
 footer {
     background-color: rgb(223, 222, 245);
     color: #000000;
@@ -284,6 +299,7 @@ footer img {
     width: 85px;
     height: auto;
 }
+
 .top3herocard img {
     width: 300px;
     height: auto;
@@ -291,6 +307,7 @@ footer img {
     align-items: center;
     justify-content: center;
 }
+
 .top3-hero-card:nth-child(1) {
     border: rgb(161, 119, 1) solid;
     background-color: rgb(216, 175, 61);
@@ -320,6 +337,7 @@ footer img {
 .top3-hero-card:nth-child(1) svg {
     color: rgb(252, 223, 102);
 }
+
 .top3herocard img {
     width: 200px;
     height: auto;
@@ -367,21 +385,26 @@ footer img {
     font-size: 18px;
     font-weight: 400;
 }
+
 .top3-hero-number {
     display: flex;
     align-items: center;
 }
+
 #top1Leaderboardrating {
     display: flex;
 }
+
 #top1Leaderboardvotes {
     display: flex;
 }
+
 #top1Leaderboarddeeds {
     display: flex;
 }
+
 @media screen and (max-width: 992px) {
-.navbar {
+    .navbar {
         flex-direction: column;
         align-items: flex-start;
     }
@@ -408,47 +431,60 @@ footer img {
         margin-bottom: 10px;
     }
 
-        .top {
-            flex-direction: column;
-        }
-    
-        .card{
-            width: 350px;
-            height: 500px;
-            flex-direction: column;
-            align-items: center;
-        }
-                .card2 {
-                    width: 350px;
-                    height: auto;
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                }
-                .top3herocard {
-                    display: block;
-                    width: 300px;
-                    height: auto;
-                    justify-content: center;
-                    align-items: center;
-                }
-        .card img {
-            width: 100%;
-        }
-    
-        .top3-hero-card {
-            margin-left: 0;
-            position: ;
-        }
-        .card4 {
-            display: block;
-            width: 350px;
-        }
-        .wanted {
-            display: block;
-        }
-        .card5 {
-            display: block;
-            width: 350px;
-        }
-        }
+    .top {
+        flex-direction: column;
+    }
+
+    .card {
+        width: 350px;
+        height: 500px;
+        flex-direction: column;
+
+    }
+
+    .card2 {
+        width: 350px;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .top3herocard {
+        display: block;
+        width: 300px;
+        height: auto;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .card img {
+        width: 100%;
+    }
+
+    .top3-hero-card {
+        margin-left: 0;
+    }
+
+    .card4 {
+        display: block;
+        width: 350px;
+    }
+
+    .wanted {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .card5 {
+        display: block;
+        width: 350px;
+    }
+
+    main {
+        display: flex;
+        align-items: center;
+    }
+
+}
